--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Blogger-App</title>
   <script src="https://kit.fontawesome.com/18bad556db.js" crossorigin="anonymous"></script>
 </head>
 <body>
